Fix Bug - span elements overlap invalid inputs
Add new classList 'still-not-valid' in JS, to toggle among
(i) valid input
(ii) invalid and focused input
(iii) invalid and not focused input

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,8 @@ span {
 
 input:focus ~ span,
 input:focus-visible ~span,
-input:valid ~ span {
+input:valid ~ span,
+.still-not-valid ~ span {
     font-size: 15px;
     transform: translateX(5px) translateY(-2px);
     font-size: 0.80em;
@@ -99,7 +100,8 @@ input:valid ~ span {
 }
 
 input:focus,
-input:focus-visible /*only if user needs to be informed where focus is currently is*/{
+input:focus-visible, /*only if user needs to be informed where focus is currently is*/
+.still-not-valid {
     border: 2px solid var(--dark-blue);
     box-shadow: 0 0 5px var(--dark-blue);
     outline: none;
@@ -108,6 +110,10 @@ input:focus-visible /*only if user needs to be informed where focus is currently
 input:valid {
     border: 2px solid var(--dark-blue);
 }
+
+
+
+
 
 form {
     width: auto;
